Added new methods in repair history 140724