@@ -7,7 +7,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class PositionRepairService {
@@ -20,7 +19,7 @@ public class PositionRepairService {
     }
 
     public List<PositionRepairDTO> getAllPositionRepairs() {
-        return positionRepairRepository.findAll().stream().map(this::convertToDTO).collect(Collectors.toList());
+        return positionRepairRepository.findAll().stream().map(this::convertToDTO).toList();
     }
 
     public PositionRepairDTO getPositionRepairById(Long id) {
